<resources>
    <string name="app_name">You</string>
    <string name="view_comments">View Comments</string>
    <string name="news_feed">News Feed</string>
    <string name="nearby_posts">Nearby Posts</string>
    <string name="search">Search</string>
    <string name="profile">My Profile</string>
    <string name="add_post">Add Post</string>
    <string name="log_out">Log Out</string>
    <string name="write_your_post">Write your post</string>
    <string name="what_s_on_you_mind">What\'s On Your Mind?</string>
    <string name="post">Post</string>
    <string name="add_a_picture">+ Add A Picture</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email address</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="please_fill_all_fields">Please Fill All Fields</string>
    <string name="password_do_not_match">Passwords do not match</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="successfully_log_in">Successfully</string>
    <string name="app_needs_this_permission">App Needs This Permission</string>
    <string name="ok">OK</string>
    <string name="please_choose_post_image">Please Choose Post Image</string>
    <string name="loading">Loading…</string>
    <string name="please_choose_image">Please choose image</string>
    <string name="post_list_size">%1$d\ %2$s</string>
    <string name="post_liked_list_size">%1$d\ %2$s</string>
    <string name="add_cover_image">+ Add Cover Image</string>
    <string name="update_image">Update Image</string>
    <string name="description">Description</string>
    <string name="add_profile_description">Add Profile Description</string>
    <string name="save">Save</string>
    <string name="no_post_yet">No Post Yet</string>
    <string name="add_new_image">Add New Image</string>
    <string name="are_you_sure_you_want_to_delete_the_post">Are you sure you want to delete the post?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="successfully_deleted">Successfully Deleted</string>
    <string name="four_dot">....</string>
    <string name="write_comment_here">Write Comment here</string>
    <string name="add_comment">add Comment</string>
    <string name="no_comments_yet">No Comments Yet</string>
    <string name="likedby">LikedBy</string>
    <string name="no_like_yet">No Likes Yet</string>
    <string name="empty">Empty</string>
    <string name="no_likes_yet">No Likes Yet</string>
    <string name="no_one_in_your_radius">No One In Your Radius</string>
    <string name="for_all">For All</string>
    <string name="for_my_radius">For My Radius</string>
    <string name="publish">Publish</string>
    <string name="please_choose_post_publish_type">Please Choose Post Publish Type</string>
    <string name="message">Message..</string>
    <string name="confirmed">Confirmed</string>
    <string name="today">Today</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="weather">Weather</string>
    <string name="visibility">Visibility</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Death</string>
    <string name="statistics_of_corona">Statistics of Corona</string>
    <string name="news">News</string>
    <string name="no_internet_connection">No Internet Connection</string>
</resources>