<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bg_main"
    android:padding="25dp">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_delete_the_post"
        android:textSize="21sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:layout_marginTop="25dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/icon_color"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/icon_color"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:text="@string/no"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:textColor="@color/icon_color"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>