<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:paddingLeft="25dp"
    android:paddingEnd="25dp"
    android:paddingRight="25dp"
    tools:context=".ui.fragments.addpost.AddPostFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/write_your_post"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvPostText"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/bg_edit_text"
        android:gravity="top"
        android:hint="@string/what_s_on_you_mind"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageCard"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvPostText">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPostImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/add_a_picture"
        android:textColor="@color/bg_main_button"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageCard" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddPost"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/bg_button"
        android:text="@string/post"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintTop_toBottomOf="@id/imageCard" />
</androidx.constraintlayout.widget.ConstraintLayout>